# libarcsdec

./: .clang-tidy  .gitignore  .gitmodules  API.md  BUILD.md  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CODING.md  DESIGN.md  LibarcsdecConfig.cmake.in  README.md  TODO.md  libarcsdec-config.cmake.in  libarcsdec.pc.in
.github/workflows/: build-and-test.yml  build-examples.yml  clang-tidy.yml  sanitizers.yml
cmake/Modules/: FindFLAC.cmake  FindSndFile.cmake  (+7 more)
doc/: CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.in  MAINPAGE.md  init.cmake
doc/doxygen-html/: CMakeLists.txt
doc/doxygen-html/doxygen-awesome-css/: CMakeLists.txt
doc/doxygen-xml/: CMakeLists.txt
doc/doxygen-xml/tasks/: CMakeLists.txt  xsl_transform.py
doc/doxygen-xml/tasks/compound-fix_vns/: CMakeLists.txt  compound-fix_vns.xsl
doc/doxygen-xml/tasks/dedup_index/: CMakeLists.txt  dedup_index.xsl
doc/doxygen-xml/tasks/index-dedup/: CMakeLists.txt  index-dedup.xsl
doc/doxygen-xml/tasks/remove_inline_ns_names/: CMakeLists.txt  remove_inline_ns_names.xsl
doc/python-virtualenv/: CMakeLists.txt
doc/texts/: CMakeLists.txt  How_to_use.md  MAINPAGE.md  MAINPAGE.md.in
examples/: CMakeLists.txt  README.md
examples/albumcalc/: CMakeLists.txt  README.md  albumcalc.cpp  makefile
examples/albumid/: CMakeLists.txt  README.md  albumid.cpp  makefile
include/: audiobuffer.hpp  audioreader.hpp  calculators.hpp  descriptor.hpp  descriptors.hpp  descriptors_audio.hpp.in  descriptors_metadata.hpp.in  libarcsdec.hpp  metaparser.hpp  parsercue.hpp  parserlibcue.hpp  parsertoc.hpp  readerffmpeg.hpp  readerflac.hpp  readersndfile.hpp  readerwav.hpp  readerwvpk.hpp  sampleproc.hpp  selection.hpp  version.hpp  version.hpp.in
install/: CMakeLists.txt  libarcsdec-config-version.cmake.in  libarcsdec-config.cmake.in  libarcsdec.pc.in
install/pkgconfig/: CMakeLists.txt  libarcsdec.pc.in
src/: audiobuffer.cpp  audiobuffer.hpp  audioformats.hpp.in  audioreader.cpp  audioreader.hpp  calculators.cpp  calculators.hpp  calculators_details.hpp  cuesheet.l  cuesheet.y  cuesheet_lexer_defs.hpp  descriptor.cpp  descriptor_details.hpp  descriptors.cpp  descriptors.hpp  descriptors_audio.hpp.in  descriptors_metadata.hpp.in  driver.cpp  driver.hpp  fileformats.cpp  fileformats.hpp  flexbison.cpp  flexbison.hpp  flexbisondriver.cpp  flexbisondriver.hpp  lexer.hpp  libinspect.cpp  libinspect.hpp  metaformats.hpp.in  metaparser.cpp  metaparser.hpp  metaparser_details.hpp  parsercdio.cpp  parsercdio.hpp  parsercue.cpp  parsercue.hpp  parsercue_details.hpp  parserdev.cpp  parserdev.hpp  parserlibcue.cpp  (+25 more)
src/parsercue/: CMakeLists.txt  parsercue.cpp  parsercue.hpp  parsercue_details.hpp
src/parsercue/cuesheet/: CMakeLists.txt  cuesheet.l  cuesheet.y  cuesheet_lexer.hpp  cuesheet_lexer_defs.hpp  cuesheet_tab.hpp  driver.hpp
src/parserlibcue/: CMakeLists.txt  parserlibcue.cpp  parserlibcue.hpp  parserlibcue_details.hpp
src/parsertoc/: CMakeLists.txt  parsertoc.cpp  parsertoc.hpp  parsertoc_details.hpp
src/parsertoc/cdrtoc/: CMakeLists.txt  cdrtoc.l  cdrtoc.y  cdrtoc_lexer.hpp  cdrtoc_lexer_defs.hpp  cdrtoc_tab.hpp  driver.hpp
src/readerffmpeg/: CMakeLists.txt  readerffmpeg.cpp  readerffmpeg.hpp  readerffmpeg_details.hpp
src/readerflac/: CMakeLists.txt  readerflac.cpp  readerflac.hpp  readerflac_details.hpp
src/readersndfile/: CMakeLists.txt  readersndfile.cpp  readersndfile.hpp  readersndfile_details.hpp
src/readerwav/: CMakeLists.txt  readerwav.cpp  readerwav.hpp  readerwav_details.hpp
src/readerwvpk/: CMakeLists.txt  readerwvpk.cpp  readerwvpk.hpp  readerwvpk_details.hpp
test/: CMakeLists.txt
test/cmake/functions/: SetupEnvironment.cmake  TestHelpers.cmake
test/data/: bach.cue  test01_ok_without_lf.cue
test/data/cuesheet/: error04.cue  error05.cue  error06.cue
test/features/: CMakeLists.txt
test/features/include/: readermocks.hpp
test/features/parsercue/: CMakeLists.txt
test/features/parsercue/data/: error01.cue  error02.cue  error03.cue
test/features/parsercue/src/: parsercue.cpp  parsercue_details.cpp
test/features/parserlibcue/: CMakeLists.txt
test/features/parserlibcue/data/: error04.cue
test/features/parserlibcue/src/: parserlibcue.cpp  parserlibcue_details.cpp
test/features/parsertoc/: CMakeLists.txt
test/features/readerffmpeg/: CMakeLists.txt
test/features/readerffmpeg/src/: readerffmpeg.cpp  readerffmpeg_details.cpp
test/features/readerflac/: CMakeLists.txt
test/features/readerflac/data/: test01.flac
test/features/readerflac/src/: libinspect.cpp  readerflac.cpp
test/features/readersndfile/: CMakeLists.txt
test/features/readersndfile/src/: readersndfile.cpp
test/features/readerwav/: CMakeLists.txt
test/features/readerwav/src/: readerwav.cpp
test/features/readerwvpk/: CMakeLists.txt
test/features/readerwvpk/data/: test01.wv
test/features/readerwvpk/src/: readerwvpk.cpp  readerwvpk_details.cpp
test/functional/: CMakeLists.txt
test/functional/data/: ok01.cue
test/functional/src/: calculators.cpp  descriptor.cpp
test/include/: readermocks.hpp
test/src/: audiobuffer.cpp  audioreader.cpp  calculators.cpp  calculators_details.cpp  cuesheet.yy.cpp  dec_version.cpp  descriptor.cpp  descriptors.cpp  libinspect.cpp  main.test.cpp  parsercue.cpp  parsercue_details.cpp  parserlibcue.cpp  parserlibcue_details.cpp  parsertoc.cpp  parsertoc_details.cpp  readerffmpeg.cpp  readerffmpeg_details.cpp  readerflac.cpp  readerflac_details.cpp  readermocks.hpp  readersndfile.cpp  readerwav.cpp  readerwav_details.cpp  readerwvpk.cpp  readerwvpk_details.cpp  selection.cpp  version.cpp
test/src/parserlibcue/: parserlibcue.cpp  parserlibcue_details.cpp
test/src/readerffmpeg/: readerffmpeg.cpp  readerffmpeg_details.cpp
test/src/readerflac/: CMakeLists.txt  readerflac.cpp  readerflac_details.cpp
test/src/readersndfile/: readersndfile.cpp  readersndfile_details.cpp
test/src/readerwvpk/: readerwvpk.cpp  readerwvpk_details.cpp
test/units/: CMakeLists.txt
test/units/src/: calculators.cpp  dec_version.cpp  descriptor.cpp  libinspect.cpp  selection.cpp
(+42 files in other folders)
